provarAnt/00D1b0000000d5bEAA/objects/BU_Referrals__c.object
<CustomObject>
    <fields>
        <fullName>Add_l_Lead_Info__c</fullName>
        <label>Add&apos;l Lead Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Type__c</fullName>
        <label>BU Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Dealer_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Dealer_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <label>Created by Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Email__c</fullName>
        <description>Email from the related Contact Record</description>
        <formula>Dealer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup an existing contact or use &quot;New&quot; function to quickly add the dealer contact</inlineHelpText>
        <label>Dealer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>BU_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <formula>TEXT(Dealer__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prospects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>CASE( Dealer__r.District__c, 
&quot;1&quot;,&quot;1&quot;, 
&quot;2&quot;,&quot;2&quot;, 
&quot;3&quot;,&quot;3&quot;, 
&quot;4&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <inlineHelpText>formula field that reads the District field from the Account</inlineHelpText>
        <label>Dealer District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to mark it as a duplicate.</description>
        <inlineHelpText>Check this box to mark it as a duplicate.</inlineHelpText>
        <label>Duplicate Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Comments__c</fullName>
        <label>Final Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_Info__c</fullName>
        <formula>IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.FileDownload?file=015E0000001Eyh3&quot;, &quot;Help&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c, &quot;Open&quot;) &amp;&amp; DATEVALUE(CreatedDate)=Today(),1,Today()-  DATEVALUE(CreatedDate))</formula>
        <inlineHelpText>formula field that calculates the age of the lead when it is in open status</inlineHelpText>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when you&apos;re ready to convert this lead into an opportunity.</inlineHelpText>
        <label>Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>input a short sentence as to what you are doing to convert this lead</inlineHelpText>
        <label>Next Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Cell__c</fullName>
        <formula>CreatedBy.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted by Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Matrix__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000003vKun&quot;, &quot;Product Matrix - Updated 7-16-2014&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Selection__c</fullName>
        <label>Product Selection</label>
        <picklist>
            <picklistValues>
                <fullName>1. Inventory Syndication, Vehicle Merchandising, Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. ILM, CRM, Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Pricing, Appraisal, Inventory Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Inventory Management - Used Car (Or Use Car Inventory Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Inventory Management - New Car (Or New Car Inventory Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Trade-In Marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. vAuto SubPrime Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. xTime Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Dealer.com Advertising, Managed Services, Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Dealertrack DMS, Sales and Fixed Ops, Registration and Titling, CRM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <controllingField>Product_Selection__c</controllingField>
            <picklistValues>
                <fullName>ATC/KBB Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC/KBB Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Classics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check In 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelley Blue Book Price Advisor Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MakeMyDeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Stockwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Non-Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>BU</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to vAuto Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to xTime Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Role__c</fullName>
        <formula>Submitted_by__r.UserRole.Name</formula>
        <inlineHelpText>formula field that reads the role assigned to the person who submitted the lead</inlineHelpText>
        <label>Submitted By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_by_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Submitted by Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>records the name of the person who clicked the button to submit the lead</inlineHelpText>
        <label>Submitted by:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BU_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Targ__c</fullName>
        <label>Target BU</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to unqualify this lead.</description>
        <inlineHelpText>Check this box to unqualify this lead.</inlineHelpText>
        <label>Unqualified Lead</label>
        <type>Checkbox</type>
    </fields>
    <label>BU Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_by__c</columns>
        <columns>Status__c</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Targ__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dealer__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Genius_Labs_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;6. Genius Labs, Auction Genius, AutoVisor&quot;</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed -  Genius Labs BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_Haystack_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>2. SEM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - Haystack BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_HomeNet_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;1. Inventory Syndication, Vehicle Merchandising, Camera&quot;</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - HomeNet BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_TIM_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>8. Trade-In Marketplace</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - TIM BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_VinSolutions_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;3. ILM, CRM, Desking&quot;,4. Websites</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - VinSolutions BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_vAuto_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;5. Pricing, Appraisal, Inventory Sourcing&quot;</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - vAuto BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>Completed_vAuto_Conquest_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>7. Inventory Management - New Car (Or New Car Inventory Management)</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted,Duplicate,Unqualified</value>
        </filters>
        <label>_Completed - vAuto Conquest BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>New_Genius_Labs_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;6. Genius Labs, Auction Genius, AutoVisor&quot;</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Sent to Genius Labs</value>
        </filters>
        <label>_New - Genius Labs BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>New_Haystack_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>2. SEM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Sent to Haystak</value>
        </filters>
        <label>_New - Haystack BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>New_HomeNet_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;1. Inventory Syndication, Vehicle Merchandising, Camera&quot;</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Sent to HomeNet</value>
        </filters>
        <label>_New - HomeNet BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>New_Last_Week</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_by__c</columns>
        <columns>Targ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Dealer__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>New_TIM_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>7. Trade-In Marketplace</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Sent to TIM</value>
        </filters>
        <label>_New - TIM BU Referrals</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_by__c</columns>
        <columns>Targ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Dealer__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_VinSolutions_BU_Referrals</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Selection__c</columns>
        <columns>Status__c</columns>
        <columns>Add_l_Lead_Info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Selection__c</field>
            <operation>equals</operation>
            <value>&quot;3. ILM, CRM, Desking&quot;,4. Websites</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Sent to Genius Labs</value>
        </filters>
        <label>_New - VinSolutions BU Referrals</label>
    </listViews>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BU Referral</pluralLabel>
    <recordTypes>
        <fullName>Converted</fullName>
        <active>true</active>
        <description>Used when the lead has been converted to an opportunity.</description>
        <label>Converted</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_BU_Referral</fullName>
        <active>true</active>
        <description>Used when creating a new BU Referral</description>
        <label>New BU Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>Default record type after BU Lead is created</description>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unqualified</fullName>
        <active>true</active>
        <description>Used when BU Lead Status is set to Unqualified</description>
        <label>Unqualified</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Convert_Lead_wo_Product_Type</fullName>
        <active>true</active>
        <description>Product Selection and Product Type must be selected to convert a lead.</description>
        <errorConditionFormula>Lead_Converted__c = TRUE &amp;&amp;
ISPICKVAL (Product_Selection__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Product_Selection__c</errorDisplayField>
        <errorMessage>Product Selection and Product Type must be selected to convert a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Final_Comments</fullName>
        <active>true</active>
        <description>If Lead Status = Unqualified, Final Comments must be entered.</description>
        <errorConditionFormula>Lead_Converted__c = FALSE &amp;&amp;
Duplicate_Lead__c = FALSE &amp;&amp;
Unqualified_Lead__c = TRUE &amp;&amp;
ISBLANK(Final_Comments__c )</errorConditionFormula>
        <errorDisplayField>Final_Comments__c</errorDisplayField>
        <errorMessage>Please enter your Final Comments if this lead is Unqualified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Checkbox</fullName>
        <active>true</active>
        <description>Prevents a user from checking more than one lead status.</description>
        <errorConditionFormula>Lead_Converted__c = TRUE &amp;&amp;
Duplicate_Lead__c = TRUE &amp;&amp;
Unqualified_Lead__c = TRUE
||
Lead_Converted__c = TRUE &amp;&amp;
Duplicate_Lead__c = TRUE
||
Lead_Converted__c = TRUE &amp;&amp;
Unqualified_Lead__c = TRUE
||
Duplicate_Lead__c = TRUE &amp;&amp;
Unqualified_Lead__c = TRUE</errorConditionFormula>
        <errorDisplayField>Duplicate_Lead__c</errorDisplayField>
        <errorMessage>You may only select one lead status.</errorMessage>
    </validationRules>
</CustomObject>